projects/vb6parse/snapshots/syntax/statements/system_interaction/savepicture/savepicture_multiple_on_same_line.snap
---
source: projects/vb6parse/src/syntax/statements/system_interaction/savepicture.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: SavePictureStatement
      children:
        - kind: SavePictureKeyword
          text: SavePicture
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: MemberAccessExpression
                  children:
                    - kind: Identifier
                      text: Pic1
                    - kind: PeriodOperator
                      text: "."
                    - kind: Identifier
                      text: Picture
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"a.bmp\""
    - kind: ColonOperator
      text: ":"
    - kind: Whitespace
      text: " "
    - kind: SavePictureStatement
      children:
        - kind: SavePictureKeyword
          text: SavePicture
        - kind: Whitespace
          text: " "
        - kind: ArgumentList
          children:
            - kind: Argument
              children:
                - kind: MemberAccessExpression
                  children:
                    - kind: Identifier
                      text: Pic2
                    - kind: PeriodOperator
                      text: "."
                    - kind: Identifier
                      text: Picture
            - kind: Comma
              text: ","
            - kind: Whitespace
              text: " "
            - kind: Argument
              children:
                - kind: StringLiteralExpression
                  children:
                    - kind: StringLiteral
                      text: "\"b.bmp\""
    - kind: Newline
      text: "\n"
